--- a/app/src/main/res/layout/activity_edit_photo.xml
+++ b/app/src/main/res/layout/activity_edit_photo.xml
@@ -1,53 +1,26 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp"
-    android:gravity="center"
+    android:padding="5dp"
     tools:context=".editPhoto">
+<androidx.fragment.app.FragmentContainerView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/fragment_container"
+    android:layout_above="@id/bottom_nav"
+    />
 
-    <ImageView
-        android:id="@+id/photoImageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/clothesImageView"
-        android:layout_marginBottom="16dp"
-        android:adjustViewBounds="true"
-        android:src="@drawable/ic_launcher_foreground" />
-
-    <ImageView
-        android:id="@+id/clothesImageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:adjustViewBounds="true"
-        android:src="@drawable/ic_launcher_foreground" />
-
-    <SeekBar
-        android:id="@+id/positionSeekBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/clothesImageView"
-        android:layout_marginBottom="8dp"
-        android:max="100" />
-
-    <Button
-        android:id="@+id/saveButton"
-        android:backgroundTint="#4CAF50"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/clothesImageView"
-        android:layout_marginTop="-687dp"
-        android:text="Save" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:layout_width="match_parent"
+        android:id="@+id/bottom_nav"
         android:background="#4CAF50"
         android:layout_height="wrap_content"
         android:elevation="5dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="3dp"
         app:menu="@menu/bottomnav" />
 
 </RelativeLayout>
