--- a/app/src/main/res/layout/fragment_cloths.xml
+++ b/app/src/main/res/layout/fragment_cloths.xml
@@ -1,13 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ClothsFragment">
-
-    <TextView
+  <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/type"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      app:layout_constraintTop_toTopOf="parent"
+    android:hint="Cloth Type"
+    >
+    <com.google.android.material.textfield.TextInputEditText
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
-
-</FrameLayout>
+        android:id="@+id/typeEdt"
+        android:layout_height="wrap_content"
+      android:inputType="text"
+      />
+  </com.google.android.material.textfield.TextInputLayout>
+<ImageView
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/type"
+    app:layout_constraintBottom_toTopOf="@id/upload"
+    android:layout_width="300dp"
+    android:layout_height="300dp"
+    android:layout_margin="40dp"
+    android:id="@+id/drawView"
+  />
+<Button
+    android:id="@+id/upload"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:layout_constraintTop_toBottomOf="@id/drawView"
+    app:layout_constraintBottom_toBottomOf="parent"
+  android:text="Upload"
+  />
+  <com.google.android.material.floatingactionbutton.FloatingActionButton
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="100dp"
+      android:layout_marginEnd="20dp"
+      android:src="@drawable/ic_upload"
+      android:backgroundTint="#4CAF50"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintBottom_toBottomOf="parent"
+      android:id="@+id/fab"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
