--- a/app/src/main/res/layout/item_clothes.xml
+++ b/app/src/main/res/layout/item_clothes.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="16dp">
     <ImageView
         android:background="@color/white"
-        android:layout_width="200dp"
+        android:layout_width="match_parent"
+        android:scaleType="centerCrop"
         android:layout_height="200dp"
+        android:backgroundTint="@color/white"
         android:layout_marginRight="20dp"
         android:id="@+id/image"/>
     <TextView
