--- a/app/src/main/res/layout/activity_clothing.xml
+++ b/app/src/main/res/layout/activity_clothing.xml
@@ -8,7 +8,7 @@
         android:id="@+id/shirtsContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"/>
