--- a/app/src/main/res/layout/activity_clothing.xml
+++ b/app/src/main/res/layout/activity_clothing.xml
@@ -24,11 +24,18 @@
         android:layout_marginEnd="16dp"/>
 
     <ImageView
+        android:visibility="gone"
         android:id="@+id/personImageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_user"
         android:layout_below="@id/trousersContainer"
         android:layout_marginTop="16dp"/>
+<com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:layout_width="wrap_content"
+    android:id="@+id/clear"
+    android:layout_height="wrap_content"
+    android:src="@drawable/baseline_clear_24"
+    />
 
 </RelativeLayout>
