--- a/app/src/main/res/layout/fragment_cloths.xml
+++ b/app/src/main/res/layout/fragment_cloths.xml
@@ -13,18 +13,32 @@
       app:layout_constraintTop_toTopOf="parent"
     android:hint="Cloth Type"
     >
-    <!-- Spinner for Description -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+      android:text="Cloth Description:"
+        android:textStyle="bold"
+      />
     <Spinner
         android:id="@+id/descriptionSpinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:padding="10dp"
+        android:textAlignment="center"
         android:layout_marginTop="16dp" />
 
-    <!-- Spinner for Name -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textStyle="bold"
+        android:text="Cloth Type:"
+        />
     <Spinner
+        android:padding="10dp"
         android:id="@+id/nameSpinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:textAlignment="center"
         android:layout_marginTop="16dp"
     />
 
@@ -36,24 +50,29 @@
     app:layout_constraintBottom_toTopOf="@id/upload"
     android:layout_width="300dp"
     android:layout_height="300dp"
-    android:layout_margin="40dp"
+    android:layout_margin="60dp"
     android:id="@+id/drawView"
+    android:src="@drawable/placeholder"
   />
-<Button
+<com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:layout_marginBottom="20dp"
     android:id="@+id/upload"
-    android:layout_width="match_parent"
+    android:layout_marginStart="20dp"
+    android:backgroundTint="@color/design_default_color_primary"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    app:layout_constraintTop_toBottomOf="@id/drawView"
-    app:layout_constraintBottom_toBottomOf="parent"
-  android:text="Upload"
+    android:background="@color/design_default_color_primary"
+   app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+ android:src="@drawable/upload"
   />
   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_marginBottom="100dp"
       android:layout_marginEnd="20dp"
-      android:src="@drawable/ic_upload"
-      android:backgroundTint="#4CAF50"
+      android:layout_marginBottom="20dp"
+      android:src="@drawable/baseline_browse_gallery_24"
+      android:backgroundTint="@color/design_default_color_primary"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:id="@+id/fab"/>
